# amplify_routing

./: README.md  pyproject.toml
src/: app_utiltsp.py  tsp_app.py  util.py
src/tsp/: solver_amplify.py  tsp_app.py  util.py
src/util_tsp/: solver_amplify.py
